bug de overflow en la tabla de report.html

--- a/resources/css/sass/style.scss
+++ b/resources/css/sass/style.scss
@@ -471,7 +471,7 @@ body{
 		&.report {
 			td {
 				max-width: 130px;
-				overflow: hidden;
+				overflow-y: hidden;
 				text-overflow: ellipsis;
 				white-space: nowrap;
 				button.dropdown-toggle {
